--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ input::placeholder {
   min-width: 300px;
 }
 
-.badge{
+.badge {
   background-color: var(--pop);
   top: -10px;
   right: -10px;
@@ -243,14 +243,23 @@ select:focus {
   right: 0;
   top: -100px;
   transition: 0.5s;
+  z-index: 800;
+}
+
+.product-item:hover .fav-icon {
+  top: 0px;
 }
 
 .fav-icon .icon {
   cursor: pointer;
   color: var(--white);
-  z-index: 100;
+  transition: 0.5s;
 }
 
-.product-item:hover .fav-icon {
-  top: 0px;
+.fav-icon .icon:hover {
+  transform: scale(1.07, 1.07);
+}
+
+.favorite {
+  color: var(--pop) !important;
 }
